# apidepth-python

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  lint-fix.yml  lint.yml  release-please.yml  security.yml
apidepth/: __init__.py  __main__.py  collector.py  configuration.py  event.py  instrumentation.py  model_name_extractor.py  rate_limit_headers.py  registry_loader.py  vendor_registry.py  version.py
apidepth/cli/: framework_detector.py  main.py  setup.py  test_cmd.py
apidepth/integrations/: django.py  flask.py
examples/: setup.py
tests/: test_collector.py  test_configure.py  test_endpoint_cases.py  test_event.py  test_framework_detector.py  test_instrumentation.py  test_model_name_extractor.py  test_rate_limit_headers.py  test_registry_loader.py  test_ssrf.py  test_vendor_registry.py
